@@ -99,6 +99,8 @@
 
 #include <stdbool.h>
 
+#include <signal.h>
+
 #include <ags/i18n.h>
 
 void ags_audio_application_context_signal_handler(int signr);
